--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>HOME</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .btn-container a {
+            width: 100%;
+            max-width: 400px;
+        }
+    </style>
 </head>
 <body>
-<h1>Welcome to the Application</h1>
-<a th:href="@{/candidates}">View Candidates</a>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Le Vu Phong</h2>
+    <div class="btn-container d-flex flex-column align-items-center">
+        <a href="/candidates/list" class="btn btn-secondary mb-3">Danh sách không phân trang</a>
+
+        <a href="/candidates/list-paged" class="btn btn-secondary mb-3">Danh sách phân trang</a>
+
+    </div>
+</div>
 </body>
 </html>
