thêm chức năng login cho ứng viên bằng emmail

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
 
         <a href="/candidates/list-paged" class="btn btn-secondary mb-3">Danh sách phân trang</a>
 
+        <a href="/candidates/login" class="btn btn-secondary mb-3">Ứng viên login</a>
     </div>
 </div>
 </body>
