login, edit, register, profile of company

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,11 +15,13 @@
 <div class="container mt-5">
     <h2 class="text-center mb-4">Le Vu Phong</h2>
     <div class="btn-container d-flex flex-column align-items-center">
-        <a href="/candidates/list" class="btn btn-secondary mb-3">Danh sách không phân trang</a>
+        <a href="/candidates/list" class="btn btn-secondary mb-3">Danh sách ứng viên - không phân trang</a>
 
-        <a href="/candidates/list-paged" class="btn btn-secondary mb-3">Danh sách phân trang</a>
+        <a href="/candidates/list-paged" class="btn btn-secondary mb-3">Danh sách ứng viên - phân trang</a>
 
         <a href="/candidates/login" class="btn btn-secondary mb-3">Ứng viên login</a>
+
+        <a href="/companies/login" class="btn btn-secondary mb-3">Công ty login</a>
     </div>
 </div>
 </body>
