--- a/src/main/resources/templates/companies/profile.html
+++ b/src/main/resources/templates/companies/profile.html
@@ -73,9 +73,10 @@
                     <div class="card-body">
                         <h5 class="card-title" th:text="${job.jobName}">Tên Công Việc</h5>
                         <p class="card-text" th:text="${job.jobDesc}">Mô tả công việc</p>
-                        <a th:href="" class="btn btn-primary">
+                        <a th:href="@{/jobs/{id}/candidates(id=${job.id})}" class="btn btn-primary">
                             <i class="bi bi-search"></i> Tìm Ứng Viên Phù Hợp
                         </a>
+
                     </div>
                 </div>
             </div>
