thêm các nút quay về home

--- a/src/main/resources/templates/candidates/candidates.html
+++ b/src/main/resources/templates/candidates/candidates.html
@@ -21,6 +21,10 @@
         <a th:href="@{/candidates/add}" class="btn btn-success">
             <i class="bi bi-plus-lg"></i> Thêm Ứng Viên Mới
         </a>
+
+        <a href="http://localhost:8080" class="btn btn-secondary me-2">
+            <i class="bi bi-house-door-fill me-1"></i> Quay về Trang Chủ
+        </a>
     </div>
 
     <div class="card">
