--- a/src/main/resources/templates/candidates/addSkill.html
+++ b/src/main/resources/templates/candidates/addSkill.html
@@ -32,9 +32,9 @@
             <label for="skillLevel" class="form-label">Mức Độ Kỹ Năng:</label>
             <select th:field="*{skillLevel}" class="form-select" id="skillLevel" required>
                 <option value="" disabled selected>Chọn Mức Độ</option>
-                <option value="0">Beginner</option>
-                <option value="1">Intermediate</option>
-                <option value="2">Advanced</option>
+                <option value="0">Thấp</option>
+                <option value="1">Trung bình</option>
+                <option value="2">Cao</option>
             </select>
         </div>
         <div class="mb-3">
